--- a/components/Grid/grid.module.scss
+++ b/components/Grid/grid.module.scss
@@ -1,22 +1,12 @@
 .base-grid {
   position: absolute;
-  top: 16px;
-  left: 20px;
   display: grid;
   grid-template-columns: repeat(20, 44px);
-  grid-template-rows: repeat(20, 48px);
+  grid-template-rows: repeat(19, 48px) 44px;
   gap: 0 4px;
   background: black;
-}
-
-.grid {
-  position: absolute;
-  top: 20px;
-  left: 20px;
-  display: grid;
-  grid-template-columns: repeat(20, 44px);
-  grid-template-rows: repeat(20, 48px);
-  gap: 0 4px;
+  z-index: -1;
+  border: 4px solid black;
 }
 
 .test-grid {
