--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,5 @@
+
+
 * {
   box-sizing: border-box;
   padding: 0;
@@ -8,10 +10,24 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  font-family: 'Manrope', sans-serif;
+}
+
+h1 {
+  font-size: 2em;
+  margin-bottom: 40px;
+  letter-spacing: 8px;
 }
 
 body {
   background: white
+}
+
+@media only screen and (max-width: 768px) {
+  h1 {
+    font-size: 1.5em;
+    margin-bottom: 20px;
+  }
 }
 
 @media (prefers-color-scheme: dark) {
