--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,17 +10,26 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
-  font-family: 'Montserrat', sans-serif;
-}
-
-h1 {
-  font-size: 1.5em;
-  margin: 10px 0 30px;
-  letter-spacing: 6px;
+  font-family: 'Karla', sans-serif;
 }
 
 body {
   background: white
+}
+
+h1 {
+  font-size: 1.6em;
+  margin: 10px 0 30px;
+  letter-spacing: 6px;
+  font-family: 'Montserrat', sans-serif;
+}
+
+p {
+  font-size: 0.8em;
+}
+
+a {
+  color: black;
 }
 
 @media only screen and (max-width: 767px) {
@@ -33,5 +42,9 @@ body {
 @media (prefers-color-scheme: dark) {
   body {
     background: black
+  }
+
+  a {
+    color: white;
   }
 }
